app/components/nav-create/nav-create.module.css
.createMenu {
  margin: 1em 2em 0 2em;
  list-style: none;
}

.createMenu button {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  width: 100%;
  box-sizing: border-box;
  margin: 0;
}

.createMenuContent {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.submenu {
  padding: 0;
  margin-left: -2em;
  margin-top: 0.5em;
  width: calc(100% + 4em);
  background-color: #444;
}

.submenuItem {
  color: #dfdfdf;
  padding: 0.5em 4em;
}

.submenuItem a {
  display: block;
  width: 100%;
  text-decoration: none;
}

